err/django-socialize.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_socialize-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/socialize'...
Compiling './lib/python3.5/site-packages/socialize/core.py'...
***   File "./lib/python3.5/site-packages/socialize/core.py", line 52
    except urllib2.HTTPError,e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/socialize/migrations'...
Compiling './lib/python3.5/site-packages/socialize/social.py'...
***   File "./lib/python3.5/site-packages/socialize/social.py", line 42
    except KeyError,e: query = ''
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/socialize/stream.py'...
***   File "./lib/python3.5/site-packages/socialize/stream.py", line 31
    except ImportError,e:
                      ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
